--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'jacoco'
 }
 
 apply from: "$rootDir/lint.gradle"
@@ -13,6 +14,11 @@ java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
+}
+
+jacoco {
+  toolVersion = "0.8.8"
+  reportsDirectory = layout.buildDirectory.dir("$rootDir/tmp/coverage")
 }
 
 configurations {
@@ -33,6 +39,21 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+test {
+	finalizedBy jacocoTestReport
+	useJUnitPlatform ()
+
+	testLogging {
+		events 'passed', 'skipped', 'failed'
+	}
+}
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		xml.required = false
+		csv.required = false
+		html.outputLocation = layout.buildDirectory.dir("$rootDir/tmp/test-reports")
+	}
+	finalizedBy jacocoTestCoverageVerification
 }
