--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	//jpa is the ORM and jdbc is just to access DB
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//commented out until i set the connnection properly
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
