--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -9,11 +9,15 @@ spring:
                 implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
                 physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     datasource:
-        url: jdbc:postgresql://127.0.0.1:5432/movies
-        username: movies-db-user
-        password: movies
-        driverClassName: org.postgresql.Driver
-    sql:
-        init:
-            mode: always 
+        url: jdbc:h2:mem:mydb
+        username: sa
+        password: password
+        driverClassName: org.h2.Driver
+    h2:
+        console:
+            enabled: true
+            path: /h2-console
+            settings:
+                trace: false
+                web-allow-others: false
   
