--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.3.4'
     id 'io.spring.dependency-management' version '1.1.6'
     id 'jacoco'
+    id "com.diffplug.spotless" version "6.13.0"
 }
 
 apply from: "$rootDir/lint.gradle"
@@ -59,4 +60,11 @@ jacocoTestReport {
         html.outputLocation = layout.buildDirectory.dir("$rootDir/build/test-reports")
     }
     finalizedBy jacocoTestCoverageVerification
+}
+
+spotless {
+	java {
+		// apply a specific flavor of google-java-format
+		googleJavaFormat('1.7').aosp()
+	}
 }
